--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "zutao.png"
   name             : "Zutao jiang"
   pronouns         : # example: "she/her"  
-  bio              : "Postdoctoral Research Fellow in MBZUAI"
-  location         : "Abu Dhabi, UAE"
-  employer         : "MBZUAI"
+  bio              : "Assistant Professor in Pengcheng Laboratory"
+  location         : "Guangdong, China"
+  employer         : "Pengcheng Laboratory"
   uri              : # URL
   email            : "taozujiang@gmail.com" 
 
