--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "China"
-title                    : "Zutao Jiang / Ph.D."
+title                    : "Zutao Jiang / 姜祖涛"
 title_separator          : "-"
 name                     : &name "Zutao Jiang"
 description              : &description "personal description"
